Bug 654770, fix few AddEventListener calls now that it has 2 optional parameters, r=sicking

--HG--
extra : rebase_source : d0a27a6ba059d5862f10ab49f0a079e8928b30fb