content/base/src/nsGenericElement.cpp
@@ -2016,7 +2016,7 @@ nsDOMEventRTTearoff::AddEventListener(const nsAString& aType,
                                       nsIDOMEventListener *aListener,
                                       PRBool useCapture)
 {
-  return AddEventListener(aType, aListener, useCapture, PR_FALSE, 0);
+  return AddEventListener(aType, aListener, useCapture, PR_FALSE, 1);
 }
 
 NS_IMETHODIMP
